Fix paths in sample and train Chainer

--- a/Chainer/Config.ini
+++ b/Chainer/Config.ini
@@ -12,13 +12,14 @@ seq_length = 50
 batchsize = 50
 epochs = 50
 grad_clip = 5
-init_from =
+init_from = 
 
 [Sampling]
-model = CharRNN-Latest.chainermodel
-vocabulary = vocab.bin
+model_file = CharRNN-Latest.model
+vocabulary_file = vocabulary.bin
 seed = 123
 sample = 1
-primetext =
+primetext = 
 length = 2000
 gpu = 0
+
