--- a/Chainer/Config.ini
+++ b/Chainer/Config.ini
@@ -13,7 +13,7 @@ batchsize = 50
 epochs = 50
 grad_clip = 5
 init_from = 
-train_mode = Word
+train_mode = Char
 
 [Sampling]
 model_file = CharRNN-Latest.model
@@ -23,5 +23,5 @@ sample = 1
 primetext = 
 length = 2000
 gpu = 0
-train_mode = Word
+train_mode = Char
 
